ingress/nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: deployment
  name: nginx
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.18
        name: nginx
