ingress/nginx/nginx-svc-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
