ingress/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.lab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
